01/20/2013 Oleg Moskalenko <mom040267@gmail.com>
Version 1.5.1.0 'Calder':
	- C++ compatible headers and build.
	- C++ library header. 
	
01/15/2013 Oleg Moskalenko <mom040267@gmail.com>
Version 1.5.0.0 'Calder':
	- RFC 5769 check utility implemented.
	- RFC 5780 STUN extension implemented. 
	
01/13/2013 Oleg Moskalenko <mom040267@gmail.com>
Version 1.4.2.5 'Scale':
	- Issue 2 fixed.
	
01/08/2013 Oleg Moskalenko <mom040267@gmail.com>
Version 1.4.2.4 'Scale':
	- Bogus "Bind to device" error message removed (Linux).
	- Docs improvements.
	
01/08/2013 Oleg Moskalenko <mom040267@gmail.com>
Version 1.4.2.3 'Scale':
	- Bandwidth limitation implemented (--max-bps option).
	- DTLS communications improved.
	
01/07/2013 Oleg Moskalenko <mom040267@gmail.com>
Version 1.4.2.2 'Scale':
	- Output messages fixed.
	- Peer test application accepts multiple listening addresses.
	- config search directories improved.
	
01/06/2013 Oleg Moskalenko <mom040267@gmail.com>
Version 1.4.2.1 'Scale':
	- Examples directory structure fixed
	- Installation fixes
	- Output messages fixed
	
01/05/2013 Oleg Moskalenko <mom040267@gmail.com>
Version 1.4.2 'Scale':
	- Daemon execution improved
	- Installation fixes
	- Added comments to the scripts
	
01/04/2013 Oleg Moskalenko <mom040267@gmail.com>
Version 1.4.1.2 'Scale':
	- Configure script introduced
	- Installation fixes
	- Run as daemon
	
01/01/2013 Oleg Moskalenko <mom040267@gmail.com>
Version 1.4.1 'Scale':
	- Options fixes
	- Build fixes
	- Script fixes
	- Installation fixes
	
12/31/2012 Oleg Moskalenko <mom040267@gmail.com>
Version 1.4 'Scale':
	- Separate file for the dynamic user database
	- Build fixes
	- Script fixes
	- Logging fixes
	
12/29/2012 Oleg Moskalenko <mom040267@gmail.com>
Version 1.3.0.2 'Ferro':
	- Debian 'squeeze' compilation fix

12/26/2012 Oleg Moskalenko <mom040267@gmail.com>
Version 1.3.0.1 'Ferro':
	- install procedure minor improvements

12/24/2012 Oleg Moskalenko <mom040267@gmail.com>
Version 1.3 'Ferro':